openShift/deployment-app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: addressbook-cache
  labels:
    app: addressbook-cache_lable_app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: addressbook-cache
  template:
    metadata:
      labels:
        app: addressbook-cache
    spec:
      containers:
        - name: addressbook-cache-app
          restartPolicy: never
          image: andreyznsk/app:cache.latest
          ports:
            - name: http
              containerPort: 9005
          volumeMounts:
            - name: addressbook-cfg-vol
              mountPath: /app/config/
          livnessProbe:
            httpGet:
              path: /actuator/health
              port: http
            failureTrashold: 100
            readinessProbe:
              httpGet:
                path: /actuator/health
                port: http
      volumes:
        - name: addressbook-cfg-vol
          configMap:
            name: addressbook-config-cache
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: addressbook-calc
  labels:
    app: addressbook-calc_lable_app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: addressbook-calc
  template:
    metadata:
      labels:
        app: addressbook-calc
    spec:
      containers:
        - name: addressbook-calc-app
          restartPolicy: never
          image: andreyznsk/app:calc.latest
          ports:
            - name: http
              containerPort: 9002
          volumeMounts:
            - name: addressbook-cfg-vol
              mountPath: /app/config/
          livnessProbe:
            httpGet:
              path: /actuator/health
              port: http
            failureTrashold: 100
            readinessProbe:
              httpGet:
                path: /actuator/health
                port: http
      volumes:
        - name: addressbook-cfg-vol
          configMap:
            name: addressbook-config-calc
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: addressbook-auth
  labels:
    app: addressbook-auth_lable_app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: addressbook-auth
  template:
    metadata:
      labels:
        app: addressbook-auth
    spec:
      containers:
        - name: addressbook-auth-app
          restartPolicy: never
          image: andreyznsk/app:auth.latest
          ports:
            - name: http
              containerPort: 9003
          volumeMounts:
            - name: addressbook-cfg-vol
              mountPath: /app/config/
          livnessProbe:
            httpGet:
              path: /actuator/health
              port: http
            failureTrashold: 100
            readinessProbe:
              httpGet:
                path: /actuator/health
                port: http
      volumes:
        - name: addressbook-cfg-vol
          configMap:
            name: addressbook-config-auth
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: addressbook-main
  labels:
    app: addressbook-main_lable_app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: addressbook-main
  template:
    metadata:
      labels:
        app: addressbook-main
    spec:
      containers:
        - name: addressbook-main-app
          restartPolicy: Never
          image: andreyznsk/app:main.latest
          ports:
            - name: http
              containerPort: 9001
          volumeMounts:
            - name: addressbook-cfg-vol
              mountPath: /app/config/
          livnessProbe:
            httpGet:
              path: /actuator/health
              port: http
            failureTrashold: 100
            readinessProbe:
              httpGet:
                path: /actuator/health
                port: http
      volumes:
        - name: addressbook-cfg-vol
          configMap:
            name: addressbook-config-main
---
