openShift/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: db-service
spec:
  selector:
    app: db-selector
  ports:
    - name: postgress
      protocol: TCP
      port: 5432
      targetPort: tcp-postgres
---
kind: Service
apiVersion: v1
metadata:
  name: main-service
spec:
  selector:
    app: addressbook-main
  ports:
    - name: main-api
      port: 9001
      targetPort: http
      protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: auth-service
spec:
  selector:
    app: addressbook-auth
  ports:
    - name: auth-api
      port: 9003
      targetPort: http
      protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: calc-service
spec:
  selector:
    app: addressbook-calc
  ports:
    - name: calc-api
      port: 9002
      targetPort: http
      protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: cache-service
spec:
  selector:
    app: addressbook-cache
  ports:
    - name: cache-api
      port: 9005
      targetPort: http
      protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: logstash-service
spec:
  selector:
    app: logstash
  ports:
    - name: logstash-api
      port: 4501
      targetPort: http
      protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: kibana-service
spec:
  selector:
    app: kibana
  ports:
    - name: kibana-api
      port: 5601
      targetPort: http
      protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: elastic-service
spec:
  selector:
    app: elastic
  ports:
    - name: elastic-api
      port: 9200
      targetPort: http
      protocol: TCP
