openShift/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: switch
  lables:
    app: switch
spec:
  rules:
    - host: sbercode-29458557-11d6-4ac2-95c0-9673a35ec176-work.apps.sbc-okd.pcbltools.ru
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: main-service
                port:
                  name: main-api
